--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^1.0.0",
+    "atob": "^2.1.2",
     "discord.js": "^14.0.3",
     "dotenv": "^16.0.1",
+    "node-fetch": "^3.2.9",
     "twitter": "^1.7.1"
   }
 }
