--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "main": "node -r dotenv/config  server.js"
+    "main": "node command.js && node -r dotenv/config  server.js"
   },
   "keywords": [],
   "author": "",
